[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dox_util"
dynamic = ["version"]
authors = [
  { name="Accenture" },
]
description = "Collection of small convenience-features for Sphinx documentations."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://github.com/esrlabs/dox"
Issues = "https://github.com/esrlabs/dox/issues"

[tool.setuptools]
license-files = ["LICENSE"]
dynamic.version = {attr = "dox_util.version.__version__"}
package-data."*" = ['_static/*', "LICENSE"]
